# exercism_cpp

./: CMakeLists.txt
hello-world/: hello_world.cpp
hello-world/.exercism/: metadata.json
